# ai-agents-developers

./: README.md  app.cs  app.js  elasticsearch_engineer_output.json  pyproject.toml
db/: chroma.sqlite3
src/agent_build_sdk/: app.js  crew.py  main.py
src/agent_build_sdk/config/: agents.yaml  tasks.yaml
src/agent_build_sdk/db/: chroma.sqlite3
